Fixed X icon not showing correctly + Meta tag fix

--- a/Styles/_header.scss
+++ b/Styles/_header.scss
@@ -84,8 +84,4 @@ header {
         width: 3rem;
         top: 1.2rem;
     }
-
-    #twitter-id {
-        width: 1.8rem;
-    }
 }
