--- a/Styles/_main.scss
+++ b/Styles/_main.scss
@@ -481,10 +481,6 @@ main {
         width: 1rem !important;
     }
 
-    #twitter-id {
-        width: 1.5rem !important;
-    }
-
     .copy-terms {
         .copyright-text,
         a {
